<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context="sel373android.leonardocarreira.com.br.voice.login_activity"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:background="@drawable/logo"
            />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/usuario"
            android:textColorHint="#333333"
            android:background="@drawable/rounded_edit_text_white">
            <requestFocus />
        </EditText>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:textColorHint="#333333"
            android:background="@drawable/rounded_edit_text_white">
        </EditText>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/codigo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/codigo_de_ativação"
            android:textColorHint="#333333"
            android:background="@drawable/rounded_edit_text_white">
        </EditText>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/entrar"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/cadastrar"/>
    </LinearLayout>

</ScrollView>
