<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#333333"
    tools:context="sel373android.leonardocarreira.com.br.voice.setupActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setupimgbtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:src="@drawable/profile_image" />

    <EditText
        android:layout_marginTop="40dp"
        android:layout_below="@id/setupimgbtn"
        android:id="@+id/codigo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/codigo_de_ativação"
        android:textColorHint="#333333"
        android:background="@drawable/rounded_edit_text_white">
    </EditText>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_below="@id/codigo"
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:textColorHint="#333333"
        android:background="@drawable/rounded_edit_text_white">
    </EditText>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/Submeter"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
